Use remote server. And modify repack script and README.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Solarmax3vt3_killer/dist/
 build-tools/
 build/
 Solarmax3vt3_killer/assets/bin/Data/Managed/Assembly-CSharp.dll
+Solarmax3vt3_killer/AndroidManifest.xml.orig
