Support 2v2 and load friend.
* support 2v2
* support load friend.
* fix script `cp` command.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ build-tools/
 build/
 Solarmax3vt3_killer/assets/bin/Data/Managed/Assembly-CSharp.dll
 Solarmax3vt3_killer/AndroidManifest.xml.orig
+build-tools.zip
