--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ build/
 Solarmax3vt3_killer/assets/bin/Data/Managed/Assembly-CSharp.dll
 Solarmax3vt3_killer/AndroidManifest.xml.orig
 build-tools.zip
+Assembly-CSharp/Assembly-CSharp.sln
